# AI-Ecosystem-Interface

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MODULE_SDK_GUIDE.md  PHASE9_SUMMARY.md  QWEN_UNION_PLAN.md  QWEN_VL_GUIDE.md  README.iskin.md  README.md  ROADMAP.md  SETUP.md  SETUP_LLM.md  UPDATE_INTEGRAION.md  USER_GUIDE.md  index.html  install.bat  install.sh  package-lock.json  package.json  start.bat  start.sh
.agents_tmp/: PLAN.md
.github/workflows/: integration-runner.yml  issue-duplicate-checker.yml  qa-changes-evaluation.yml  run-eval.yml  version-bump-prs.yml
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/api/: chat.js
client/src/components/: ChatPanel.jsx  FileTree.jsx  Tabs.jsx
client/src/hooks/: useFileSystem.js
config/: llm.toml
iskin/src/: fileService.ts  index.css  store.ts
iskin/src-tauri/: test_modules.rs
iskin/src-tauri/src/: lib.rs
iskin/src-tauri/src/agent/: checkpoint.rs  context_mgr.rs  planner.rs  validator.rs
iskin/src-tauri/src/agent_v2/: agent_loop.rs  mod.rs  state_machine.rs
iskin/src-tauri/src/api/: commands.rs
iskin/src-tauri/src/core/: mod.rs
iskin/src-tauri/src/memory/: indexer.rs  knowledge_base.rs  vector_store.rs
iskin/src-tauri/src/modules/: agent_module.rs  memory_module.rs  tool_module.rs
iskin/src-tauri/src/sandbox/: container.rs  mod.rs  self_healing.rs
iskin/src/components/: ActionLog.css  AgentStatusBar.tsx  ConfirmationDialog.tsx  ImpactReport.css  KnowledgeBase.tsx  TaskPanel.css  TaskPanel.tsx  TerminalPanel.tsx  UpdatePanel.tsx
iskin_cli/: README.md  pyproject.toml
iskin_cli/examples/: 01_basic.py
iskin_cli/src/iskin/: __init__.py  cli.py
iskin_cli/src/iskin/tools/: __init__.py  memory.py  sandbox.py
openhands-agent-server/: pyproject.toml
openhands-agent-server/openhands/agent_server/: __main__.py  api.py  bash_service.py  conversation_router.py
openhands-sdk/: pyproject.toml
openhands-tools/: pyproject.toml
openhands-workspace/: pyproject.toml
scripts/: run.bat  run.sh  setup.bat  setup.sh
server/: package-lock.json  package.json  server.js
src/: App.tsx  i18n.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json  test-cargo.toml
src-tauri/src/: llm.rs  main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/agent_v2/: context_compressor.rs  tool_protocol.rs
src-tauri/src/api/: commands.rs  mod.rs
src-tauri/src/core/: lifecycle.rs  resources.rs  security.rs
src-tauri/src/memory/: indexer.rs  knowledge_base.rs  mod.rs  rules_engine.rs  vector_store.rs
src-tauri/src/modules/: agent_module.rs  memory_module.rs  mod.rs  tool_module.rs
src-tauri/src/sandbox/: browser.rs  container.rs  mod.rs  self_healing.rs  vnc.rs
src-tauri/src/sdk/: mod.rs
src-tauri/src/self_improvement/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/tools/: executor.rs  mod.rs  registry.rs
src-tauri/src/updater/: mod.rs
src-tauri/test_project/: Cargo.toml
src-tauri/test_project/src/: main.rs
src/components/: ActionLog.tsx  AgentStatusBar.css  ChatPanel.tsx  CodeSearch.tsx  ConfirmationDialog.css  EditorArea.tsx  FileTree.tsx  ImpactReport.tsx  KnowledgeBase.tsx  SandboxPanel.tsx  TerminalPanel.tsx  UpdatePanel.css
tests/agent_server/: test_conversation_router.py
(+26 files in other folders)
