[package]
name = "iskin"
version = "0.1.0-alpha"
edition = "2021"
description = "Intelligent Self-Improving Knowledge Interface Network - Autonomous AI IDE"
authors = ["ISKIN Team"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
libloading = "0.8"  # For dynamic library loading
wasmtime = "19.0"   # For WASM module support
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"  # For async trait definitions

# LLM Integration (HTTP client to llama.cpp)
toml_edit = "0.22"  # Config parsing

# Rules Engine
regex = "1.10"

# Memory & Indexing
qdrant-client = "1.10"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"

# Sandbox
bollard = "0.17"  # Docker API client
async-process = "2.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Terminal PTY
portable-pty = "0.8"

# Security
os_pipe = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
